2012-03-19  Michal Mocny  <mmocny@google.com>

        [chromium] Adding support for GL_EXT_discard_framebuffer.
        https://bugs.webkit.org/show_bug.cgi?id=81383

        Reviewed by James Robinson.

        * src/Extensions3DChromium.cpp:
        (WebCore::Extensions3DChromium::discardFramebufferEXT):
        (WebCore):
        (WebCore::Extensions3DChromium::ensureFramebufferCHROMIUM):
        * src/GraphicsContext3DChromium.cpp:
        (WebCore):
        * src/GraphicsContext3DPrivate.h:
        (GraphicsContext3DPrivate):
        * tests/FakeWebGraphicsContext3D.h:
        (WebKit::FakeWebGraphicsContext3D::discardFramebufferEXT):
        (WebKit::FakeWebGraphicsContext3D::ensureFramebufferCHROMIUM):
        (FakeWebGraphicsContext3D):

2012-03-19  Ian Vollick  <vollick@chromium.org>

        [chromium] Times in the cc should be expressed in seconds.
        https://bugs.webkit.org/show_bug.cgi?id=80514

        Reviewed by James Robinson.

        * tests/CCDelayBasedTimeSourceTest.cpp:
        (WebKitTests::TEST):
        * tests/CCFrameRateControllerTest.cpp:
        (WebKitTests::TEST):
        * tests/CCSchedulerTestCommon.h:
        (WebKitTests::FakeCCThread::pendingDelayMs):
        (WebKitTests::FakeCCDelayBasedTimeSource::create):
        (WebKitTests::FakeCCDelayBasedTimeSource::setMonotonicallyIncreasingTime):
        (WebKitTests::FakeCCDelayBasedTimeSource::monotonicallyIncreasingTime):
        (WebKitTests::FakeCCDelayBasedTimeSource::FakeCCDelayBasedTimeSource):
        (FakeCCDelayBasedTimeSource):
        * tests/CCTimerTest.cpp:
        (WebKitTests::TEST_F):

2012-03-19  Nat Duca  <nduca@chromium.org>

        [chromium] Stop deriving WebCompositor from WebCompositorInputHandler
        https://bugs.webkit.org/show_bug.cgi?id=80586

        Reviewed by Darin Fisher.

        * public/WebCompositor.h:
        (WebKit):
        * public/WebCompositorInputHandler.h:
        (WebCompositorInputHandler):
        * public/WebWidgetClient.h: